@@ -183,6 +183,35 @@ class tx_oelib_DataMapper_testcase extends tx_phpunit_testcase {
 		);
 	}
 
+	public function testLoadWithModelWithExistingUidOfHiddenRecordMarksModelAsDead() {
+		$uid = $this->testingFramework->createRecord(
+			'tx_oelib_test', array('title' => 'foo', 'hidden' => 1)
+		);
+
+		$model = new tx_oelib_tests_fixtures_TestingModel();
+		$model->setUid($uid);
+		$this->fixture->load($model);
+
+		$this->assertTrue(
+			$model->isDead()
+		);
+	}
+
+	public function testLoadWithModelWithExistingUidOfHiddenRecordAndHiddenBeingAllowedFillsModelWithData() {
+		$uid = $this->testingFramework->createRecord(
+			'tx_oelib_test', array('title' => 'foo', 'hidden' => 1)
+		);
+
+		$model = new tx_oelib_tests_fixtures_TestingModel();
+		$model->setUid($uid);
+		$this->fixture->load($model, true);
+
+		$this->assertEquals(
+			'foo',
+			$model->getTitle()
+		);
+	}
+
 
 	//////////////////////////////////////
 	// Tests concerning the model states
@@ -278,6 +307,59 @@ class tx_oelib_DataMapper_testcase extends tx_phpunit_testcase {
 
 		$this->assertTrue(
 			$this->fixture->find($uid)->isLoaded()
+		);
+	}
+
+	public function testExistsModelForExistentUidOfHiddenRecordReturnsFalse() {
+		$uid = $this->testingFramework->createRecord(
+			'tx_oelib_test', array('hidden' => 1)
+		);
+
+		$this->assertFalse(
+			$this->fixture->existsModel($uid)
+		);
+	}
+
+	public function testExistsModelForExistentUidOfHiddenRecordAndHiddenBeingAllowedReturnsTrue() {
+		$uid = $this->testingFramework->createRecord(
+			'tx_oelib_test', array('hidden' => 1)
+		);
+
+		$this->assertTrue(
+			$this->fixture->existsModel($uid, true)
+		);
+	}
+
+	public function testExistsModelForExistentUidOfLoadedHiddenRecordAndHiddenNotBeingAllowedReturnsFalse() {
+		$uid = $this->testingFramework->createRecord(
+			'tx_oelib_test', array('hidden' => 1)
+		);
+		$this->fixture->load($this->fixture->find($uid), true);
+
+		$this->assertFalse(
+			$this->fixture->existsModel($uid)
+		);
+	}
+
+	public function testExistsModelForExistentUidOfLoadedHiddenRecordAndHiddenBeingAllowedReturnsTrue() {
+		$uid = $this->testingFramework->createRecord(
+			'tx_oelib_test', array('hidden' => 1)
+		);
+		$this->fixture->load($this->fixture->find($uid), true);
+
+		$this->assertTrue(
+			$this->fixture->existsModel($uid, true)
+		);
+	}
+
+	public function testExistsModelForExistentUidOfLoadedNonHiddenRecordAndHiddenBeingAllowedReturnsTrue() {
+		$uid = $this->testingFramework->createRecord(
+			'tx_oelib_test', array('hidden' => 0)
+		);
+		$this->fixture->load($this->fixture->find($uid));
+
+		$this->assertTrue(
+			$this->fixture->existsModel($uid, true)
 		);
 	}
 }
